# allocatr

./: .gitignore  CMakeLists.txt
src/: allocatr.c  allocatr.h  linux_core.c  linux_memcore.c  memcore.h  oscore.h  win32_core.c
test/: allocatr_test.c
